--- a/app/scan.html
+++ b/app/scan.html
@@ -3,29 +3,27 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta name="description" content="Lightweight progressive web app for scanning QR codes offline">
-    <meta name="keywords" content="qrcode, scanner, scan, offline, progressive, web, app, pwa, free, lightweight, light">
-    <meta name="author" content="Louis Lagrange">
-    <title>QR Code Scanner</title>
-
+    <meta name="description" content="QR Code Scanner for online and offline shopping">
+    <title>shoop</title>
+    <style>
+        body    
+        {
+        font-family: 'Poppins', sans-serif;
+        }
+    </style>
     <link rel="manifest" href="manifest.json">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="assets/images/icons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="assets/images/icons/favicon-16x16.png" sizes="16x16">
-    <link rel="mask-icon" href="assets/images/icons/safari-pinned-tab.svg" color="#3f51b5">
-    <link rel="shortcut icon" href="assets/images/icons/favicon.ico">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="QR Code Scanner">
-    <meta name="application-name" content="QR Code Scanner">
-    <meta name="msapplication-config" content="assets/images/icons/browserconfig.xml">
-    <meta name="theme-color" content="#3f51b5">
+    <link rel="icon" type="image/png" href="assets/images/icons/favicon.png" sizes="32x32">
+    <meta name="apple-mobile-web-app-title" content="shoop">
+    <meta name="application-name" content="shoop">
+    <meta name="msapplication-config" content="assets/images/icons/favicon.png">
+    <meta name="theme-color" content="#5e17eb">
 
-    <meta property="og:title" content="QR Code Scanner" />
+    <meta property="og:title" content="shoop" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://minishlink.github.io/pwa-qr-code-scanner" />
-    <meta property="og:image" content="https://minishlink.github.io/pwa-qr-code-scanner/assets/images/icons/android-chrome-256x256.png" />
-    <meta property="og:description" content="Lightweight progressive web app for scanning QR codes offline" />
+    <meta property="og:url" content="https://efynm1.github.io/shoop/" />
+    <meta property="og:image" content="https://github.com/efynm1/shoop/blob/main/app/assets/images/icons/favicon.png" />
+    <meta property="og:description" content="QR Code Scanner for online and offline shopping" />
 
     <script type="text/javascript">
         if ('serviceWorker' in navigator) {
@@ -48,25 +46,23 @@
     <video id="camera" autoplay>You need a camera in order to use this app.</video>
     <div id="snapshotLimitOverlay">
         <div id="about">
-            <h4>QR Code Scanner</h4>
+            <h4>shoop</h4>
             <p>
-                This is a lightweight progressive web app for scanning QR Codes offline.<br />
-                You'll need at least a camera and a compatible browser.<br />
-                Source code is available on GitHub (Minishlink/pwa-qr-code-scanner), click the <strong>About</strong> button.
+                Place the QR code within the boundary to scan
             </p>
         </div>
     </div>
     <canvas id="snapshot"></canvas>
     <button id="flipCamera" type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Flip Camera</button>
-    <a id="aboutButton" type="button" href="https://github.com/Minishlink/pwa-qr-code-scanner" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">About</a>
+    <a id="aboutButton" type="button" href="https://efynm1.github.io/shoop/" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">home</a>
 
     <dialog class="mdl-dialog">
-        <h4 class="mdl-dialog__title">Your text</h4>
+        <h4 class="mdl-dialog__title">Product name</h4>
         <div class="mdl-dialog__content">
             <p id="resultsContainer"><span id="result"></span></p>
             <p>
                 <button type="button" class="copy mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised" data-clipboard-target="#result">Copy</button>
-                <a class="search mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Search</a>
+                <a class="search mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Purchase</a>
             </p>
         </div>
         <div class="mdl-dialog__actions">
