--- a/app/scan.html
+++ b/app/scan.html
@@ -1,74 +1,184 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta name="description" content="QR Code Scanner for online and offline shopping">
-    <title>shoop</title>
+    <title>Shoop</title>
+
+    <link rel="manifest" href="manifest.json">
+    <link rel ="stylesheet" href="https://github.com/efynmgit/idp2/blob/main/shoop/assets/style.css">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Shoop">
+    <meta name="application-name" content="Shoop">
+    <meta name="theme-color" content="#5e17eb">
+
+    <meta property="og:title" content="Shoop" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://efynmgit.idp2/shoop" />
+    <meta property="og:image" content="https://efynmgit.idp2/shoop/assets/images/icons/logowhite" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
     <style>
         body    
         {
         font-family: 'Poppins', sans-serif;
-        }
-    </style>
-    <link rel="manifest" href="manifest.json">
+        width:100%;
+        text-align:center;
+}
+img{
+    border:0;
+}
+#main{
+    margin: 15px auto;
+    background:white;
+    overflow: auto;
+	width: 100%;
+}
+#header{
+    background:white;
+    margin-bottom:15px;
+}
+#mainbody{
+    background: white;
+    width:100%;
+	display:none;
+}
+#footer{
+    background:white;
+}
+#v{
+    width:320px;
+    height:240px;
+}
+#qr-canvas{
+    display:none;
+}
+#qrfile{
+    width:320px;
+    height:240px;
+}
+#mp1{
+    text-align:center;
+    font-size:35px;
+}
+#imghelp{
+    position:relative;
+    left:0px;
+    top:-160px;
+    z-index:100;
+    font:18px arial,sans-serif;
+    background:#f0f0f0;
+	margin-left:35px;
+	margin-right:35px;
+	padding-top:10px;
+	padding-bottom:10px;
+	border-radius:20px;
+}
+.selector{
+    margin:0;
+    padding:0;
+    cursor:pointer;
+    margin-bottom:-5px;
+}
+#outdiv
+{
+    width:320px;
+    height:240px;
+	border: solid;
+	border-width: 3px 3px 3px 3px;
+}
+#result{
+    border: solid;
+	border-width: 1px 1px 1px 1px;
+	padding:20px;
+	width:70%;
+}
 
-    <link rel="icon" type="image/png" href="assets/images/icons/favicon.png" sizes="32x32">
-    <meta name="apple-mobile-web-app-title" content="shoop">
-    <meta name="application-name" content="shoop">
-    <meta name="msapplication-config" content="assets/images/icons/favicon.png">
-    <meta name="theme-color" content="#5e17eb">
+ul{
+    margin-bottom:0;
+    margin-right:40px;
+}
+li{
+    display:inline;
+    padding-right: 0.5em;
+    padding-left: 0.5em;
+    font-weight: bold;
+    border-right: 1px solid #333333;
+}
+li a{
+    text-decoration: none;
+    color: black;
+}
 
-    <meta property="og:title" content="shoop" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://efynm1.github.io/shoop/" />
-    <meta property="og:image" content="https://github.com/efynm1/shoop/blob/main/app/assets/images/icons/favicon.png" />
-    <meta property="og:description" content="QR Code Scanner for online and offline shopping" />
+#footer a{
+	color: black;
+}
+.tsel{
+    padding:0;
+}
 
-    <script type="text/javascript">
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('service-worker.js');
-        }
-    </script>
+</style>
 
-    <link rel="stylesheet" type="text/css" href="assets/lib/dialog-polyfill/dialog-polyfill.css" />
-    <link rel="stylesheet" href="assets/lib/material-design-lite/material.min.css">
-    <link rel="stylesheet" href="assets/style.css">
+<script type="text/javascript" src="llqrcode.js"></script>
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+<script type="text/javascript" src="webqr.js"></script>
 
-    <script src="assets/lib/dialog-polyfill/dialog-polyfill.js"></script>
-    <script src="assets/lib/material-design-lite/material.min.js"></script>
-    <script src="assets/lib/clipboard/dist/clipboard.min.js"></script>
-    <script src="assets/app.js"></script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-24451557-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
 </head>
+
 <body>
-    <h1>shoop</h1>
-    <div id="loading" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
+<div id="main">
+<div id="header">
+<div style="position:relative;top:+20px;left:0px;"><g:plusone size="medium"></g:plusone></div>
+<p id="mp1">
+shoop
+</p>
+<a href="index.html">home</a>
+</div>
+<div id="mainbody">
+<table class="tsel" border="0" width="100%">
+<tr>
+<td valign="top" align="center" width="50%">
+<table class="tsel" border="0">
+<tr>
+<td><img class="selector" id="webcamimg" src="vid.png" onclick="setwebcam()" align="left" /></td>
+<td><img class="selector" id="qrimg" src="cam.png" onclick="setimg()" align="right"/></td></tr>
+<tr><td colspan="2" align="center">
+<div id="outdiv">
+</div></td></tr>
+</table>
+</td>
+</tr>
+<tr><td colspan="3" align="center">
+<img src="down.png"/>
+</td></tr>
+<tr><td colspan="3" align="center">
+<div id="result"></div>
+</td></tr>
+</table>
 
-    <video id="camera" autoplay>You need a camera in order to use this app.</video>
-    <div id="snapshotLimitOverlay">
-        <div id="about">
-            
-            <p>
-                Place the QR code within the boundary to scan
-            </p>
-        </div>
-    </div>
-    <canvas id="snapshot"></canvas>
-    <button id="flipCamera" type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Flip Camera</button>
-    <a id="aboutButton" type="button" href="https://efynm1.github.io/shoop/" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">home</a>
+<div id="footer">
 
-    <dialog class="mdl-dialog">
-        <h4 class="mdl-dialog__title">Product name</h4>
-        <div class="mdl-dialog__content">
-            <p id="resultsContainer"><span id="result"></span></p>
-            <p>
-                <button type="button" class="copy mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised" data-clipboard-target="#result">Copy</button>
-                <a class="search mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Purchase</a>
-            </p>
-        </div>
-        <div class="mdl-dialog__actions">
-            <button type="button" class="continue mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--colored">Continue</button>
-        </div>
-    </dialog>
+</div>
+</div>
+<canvas id="qr-canvas" width="800" height="600"></canvas>
+<script type="text/javascript">load();</script>
 </body>
+
 </html>
