--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-    <h1>shoop</h1>
+    <p id="mp1">shoop</p>
     <p>Let's get started! Click the scan button below.</p>
     <div class="mdl-dialog__actions">
         <a id="startButton" type="button" href="scan.html">scan</a>
