--- a/scan2.html
+++ b/scan2.html
@@ -146,7 +146,9 @@ li a{
 <div id="main">
 <div id="header">
 <div style="position:relative;top:+20px;left:0px;"><g:plusone size="medium"></g:plusone></div>
-<p id="mp1">shoop</p>
+<p id="mp1">
+shoop
+</p>
 <a href="index.html">home</a>
 </div>
 <div id="mainbody">
