--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>QRCODE</title>
+<title>shoop</title>
 
 <style type="text/css">
 </style>
@@ -100,7 +100,6 @@ function initCanvas(ww,hh)
 	}
 
 	function passLine(stringPixels) { 
-		//a = (intVal >> 24) & 0xff;
 
 		var coll = stringPixels.split("-");
 	
