--- a/scan.html
+++ b/scan.html
@@ -156,10 +156,7 @@ shoop
 <tr>
 <td valign="top" align="center" width="50%">
 <table class="tsel" border="0">
-<tr>
-<td><img class="selector" id="webcamimg" src="vid.png" onclick="setwebcam()" align="left" /></td>
-<td><img class="selector" id="qrimg" src="cam.png" onclick="setimg()" align="right"/></td></tr>
-<tr><td colspan="2" align="center">
+<td colspan="2" align="center">
 <div id="outdiv">
 </div></td></tr>
 </table>
