--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>Shoop</title>
+    <title>shoop</title>
 
     <link rel="manifest" href="manifest.json">
-    <link rel ="stylesheet" href="https://github.com/efynmgit/idp2/blob/main/shoop/assets/style.css">
+    <link rel ="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/lib/mdl/material.min.css" />
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Shoop">
