--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
 
     <meta property="og:title" content="Shoop" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://efynmgit.idp2/shoop" />
-    <meta property="og:image" content="https://efynmgit.idp2/shoop/assets/images/icons/logowhite" />
+    <meta property="og:url" content="https://efynm1.github.io/shoop/app/index.html" />
+    <meta property="og:image" content="https://github.com/efynm1/shoop/blob/main/app/assets/images/icons/favicon.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
     <h1>shoop</h1>
     <p>Let's get started! Click the scan button below.</p>
     <div class="mdl-dialog__actions">
-        <a id="startButton" type="button" href="scan.html">scan</a>
+        <a id="aboutButton" type="button" href="scan.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">scan</a>
     </div>
 </body>
 </html>
