--- a/app/scan.html
+++ b/app/scan.html
@@ -16,7 +16,7 @@
     <meta name="apple-mobile-web-app-title" content="shoop">
     <meta name="application-name" content="shoop">
     <meta name="msapplication-config" content="assets/images/icons/browserconfig.xml">
-    <meta name="theme-color" content="#3f51b5">
+    <meta name="theme-color" content="#5e17eb">
 
     <meta property="og:title" content="shoop" />
     <meta property="og:type" content="website" />
