--- a/app/scan.html
+++ b/app/scan.html
@@ -26,7 +26,7 @@
 
     <script type="text/javascript">
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('\/assets\/app.js');
+            navigator.serviceWorker.register('app.js');
         }
     </script>
 
