--- a/app/scan.html
+++ b/app/scan.html
@@ -32,12 +32,12 @@
 
     <link rel="stylesheet" type="text/css" href="assets/lib/dialog-polyfill/dialog-polyfill.css" />
     <link rel="stylesheet" href="assets/lib/mdl/material.min.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://github.com/efynm1/shoop/blob/main/app/style.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.5.4/dialog-polyfill.js"></script>
     <script src="assets/lib/mdl/material.js"></script>
     <script src="assets/lib/clipboard/dist/clipboard.min.js"></script>
-    <script src="app.js"></script>
+    <script src="https://github.com/efynm1/shoop/blob/main/app/app.js"></script>
 </head>
 <body>
     <div id="loading" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
