--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>shoop</title>
 
     <link rel="manifest" href="manifest.json">
-    <link rel ="stylesheet" href="style.css">
+    <link rel ="stylesheet" href="https://github.com/efynm1/shoop/blob/main/app/style.css">
     <link rel="stylesheet" href="assets/lib/mdl/material.min.css" />
 
     <meta name="apple-mobile-web-app-capable" content="yes">
