--- a/app/scan.html
+++ b/app/scan.html
@@ -23,7 +23,12 @@
     <meta property="og:url" content="https://efynm1.github.io/shoop" />
     <meta property="og:image" content="assets/images/icons/favicon.png" />
     <meta property="og:description" content="QR code scanner for online and offline shopping" />
-
+    <style>
+        body    
+        {
+        font-family: 'Poppins', sans-serif;
+        }
+    </style>
     <script type="text/javascript">
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('sw.js');
