--- a/app/scan.html
+++ b/app/scan.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="shoop" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://efynm1.github.io/shoop" />
-    <meta property="og:image" content="assets/images/icons/favicon.png" />
+    <meta property="og:image" content="https://github.com/efynm1/shoop/blob/main/app/assets/images/icons/favicon.png?raw=true" />
     <meta property="og:description" content="QR code scanner for online and offline shopping" />
     <style>
         body    
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div id="loading" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
-    <div id="about"><h1>shoop</h1></div>
+    <div id="about"><h1 style="color:#5e17eb">shoop</h1></div>
     <video id="camera" autoplay>You need a camera in order to use this app.</video>
     <div id="snapshotLimitOverlay"></div>
     <canvas id="snapshot"></canvas>
