--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-    <h1>shoop</h1>
+    <h1 style="color:#5e17eb">shoop</h1>
     <p>Let's get started! Click the scan button below.</p>
     <div class="mdl-dialog__actions">
         <a id="aboutButton" type="button" href="scan.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">scan</a>
